# wq

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  config.yaml  main.py  pyproject.toml  smart_generate.py
.wqa/: runtime.db
.wqa-smoke/: alpha_history.db  runtime.db
.wqa-smoke/db/: runtime.db
.wqa-test/: config.yaml  runtime.db
docs/: IMPLEMENTATION_SUMMARY.md  LEARNING_README.md  README.md  agent_lab.md  architecture.md  cli.md  configuration.md  development.md  learning_examples.md  learning_system.md  submission_workflow.md
docs/strategies/2026-02-04/: recap.md  report.txt  strategy.md  strategy.yaml
docs/strategies/2026-02-05/: report.txt  strategy.md  strategy.yaml
docs/strategies/2026-02-06/: report.txt  strategy.md  strategy.yaml
docs/strategies/2026-02-08/: report.txt  strategy.yaml
docs/strategies/2026-02-14/: regular_report.txt  regular_strategy.yaml  regular_summary.md  report.txt  strategy.yaml  summary.md
scripts/: analyze_submission_failures.py  daily_run.sh  generate.sh  pending.sh  power_pool_research_run.py  replay_top_alphas.py  simulate.sh  submit.sh  usa_combo_tuning.py  usa_regular_diversified_family_run.py  usa_regular_latest_reports_run.py  usa_regular_research_tuning.py
tests/: test_client.py  test_wqa_runtime.py
wq_brain/: __init__.py  agent_cli.py  agent_runtime.py  alpha_generator.py  alpha_submitter.py  client.py  dashboard.py  learning.py  refinement_policy.py  source_collector.py  strategy.py  submission_failure_analyzer.py
wq_brain/static/: dashboard.html
(+13 files in other folders)
