[project]
name = "wq-brain-automation"
version = "0.1.0"
description = "WorldQuant Brain Alpha 自动提交系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "dotenv>=0.9.9",
]

[tool.setuptools.packages.find]
include = ["wq_brain*"]

[project.scripts]
wq-brain = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
