[project]
name = "wqa"
version = "0.1.0"
description = "WorldQuant multi-agent research and submission runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[tool.setuptools.packages.find]
include = ["wq_brain*"]

[project.scripts]
wqa = "wq_brain.agent_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
